test_suite5/ALAN/test_suite/alan-2022-examples/failing/000780_mutation.alan
source Y2 begin boolean else array O; relax end
